changed swagger file
